--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,58 @@
-$primary: #0099CC;
+$background-color: #f5f5f5;
 
-.title {
-  color: $primary;
+:root {
+  font-size: 60%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  background-color: $background-color;
+}
+
+.calendar {
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+
+  .days li {
+    height: 40px;
+    font-size: 1.6rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    border-radius: 50%;
+  }
+
+  .days .this__month {
+    color: #6B7897;
+  }
+
+  .week__days {
+    border-bottom: 1px solid #6B7897;
+    padding: 0.4rem 0;
+  }
+
+  .week__days,
+  .days {
+    display: grid;
+    grid-template-columns: repeat(7, 40px);
+    row-gap: 1.5rem;
+    column-gap: 1rem;
+    margin-top: 1rem;
+    
+    list-style: none;
+    text-align: center;
+  }
+
+  .today {
+    border-radius: 50%;
+    background-color: cyan;
+  }
 }
