--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,5 @@
 $background-color: #f5f5f5;
-$primary-color: #61b9eb;
+$primary-color: #60CDFF;
 $secondary-color: #6d7695;
 $text-title: #3a495e;
 $neutral-color: #959595;
@@ -9,7 +9,7 @@ $secondary-spacing: 2rem;
 
 :root {
   font-family: 'Roboto', sans-serif;
-  font-size: 60%;
+  font-size: 62.5%;
 }
 
 * {
@@ -22,5 +22,5 @@ body {
   background-color: $background-color;
 }
 
-@import "menu-todo";
+@import "menu";
 @import "calendar";
