--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,5 @@
 $background-color: #f5f5f5;
-$primary-color: #60CDFF;
+$primary-color: #60cdff;
 $secondary-color: #6d7695;
 $text-title: #3a495e;
 $neutral-color: #959595;
@@ -8,7 +8,7 @@ $primary-spacing: 1rem;
 $secondary-spacing: 2rem;
 
 :root {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 62.5%;
 }
 
@@ -20,6 +20,41 @@ $secondary-spacing: 2rem;
 
 body {
   background-color: $background-color;
+}
+
+.box-shadow {
+  background: $background-color;
+  border: 1px solid rgb(200, 200, 200);
+  box-shadow: 2px 2px 8px rgba(200, 200, 200, 0.5);
+}
+
+.button {
+  height: 4rem;
+  border: none;
+  border-radius: 4px;
+  padding: $primary-spacing;
+
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: white;
+  background-color: $primary-color;
+}
+
+.mobile__menu {
+  @extend .box-shadow;
+  position: fixed;
+  width: 100%;
+  height: 10vh;
+  padding: $primary-spacing;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+
+  bottom: 0;
+  button {
+    @extend .button;
+    width: 60%;
+  }
 }
 
 @import "menu";
