--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,5 +1,6 @@
 $background-color: #f5f5f5;
 $primary-color: #60cdff;
+$primary-dark-color: #499ABF;
 $secondary-color: #6d7695;
 $text-title: #3a495e;
 $neutral-color: #959595;
@@ -19,6 +20,7 @@ $secondary-spacing: 2rem;
 }
 
 body {
+  display: flex;
   background-color: $background-color;
 }
 
@@ -40,22 +42,6 @@ body {
   background-color: $primary-color;
 }
 
-.mobile__menu {
-  @extend .box-shadow;
-  position: fixed;
-  width: 100%;
-  height: 10vh;
-  padding: $primary-spacing;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-
-  bottom: 0;
-  button {
-    @extend .button;
-    width: 60%;
-  }
-}
-
 @import "menu";
 @import "calendar";
+@import "todoList";
