--- a/public/styles/_calendar.scss
+++ b/public/styles/_calendar.scss
@@ -1,7 +1,7 @@
 .calendar {
   width: 100%;
-  display: flex;
-  flex-direction: column;
+  max-height: 900px;
+  align-self: center;
 
   padding: 2rem;
   font-weight: 700;
@@ -11,6 +11,7 @@
     font-size: 2rem;
     text-align: center;
     color: $text-title;
+    margin-bottom: 2rem;
   }
 
   .week__days {
@@ -79,8 +80,3 @@
     }
   }
 }
-
-// @media (min-width: 700px) {
-//   .calendar {
-//   }
-// }
