To do element refatorado

--- a/public/styles/_calendar.scss
+++ b/public/styles/_calendar.scss
@@ -50,7 +50,7 @@
     }
 
     .today {
-      background-color: rgb(220, 50, 50);
+      background-color: $third-color;
       color: whitesmoke;
     }
 
