--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -2,6 +2,7 @@ $background-color: #f5f5f5;
 $primary-color: #60cdff;
 $primary-dark-color: #499ABF;
 $secondary-color: #6d7695;
+$third-color: rgb(220, 50, 50);
 $text-title: #3a495e;
 $neutral-color: #959595;
 
