--- a/public/styles/_menu.scss
+++ b/public/styles/_menu.scss
@@ -1,7 +1,7 @@
 .todo__menu {
   position: absolute;
   width: 100vw;
-  height: 90vh;
+  height: 100vh;
   padding: $secondary-spacing;
 
   display: flex;
@@ -23,15 +23,12 @@
     justify-content: center;
     align-items: center;
 
-    #content{
+    #body {
       @extend .box-shadow;
-
       width: 100%;
-      max-width: 100%;
-      min-width: 100%;
-      min-height: 100px;
-      max-height: 120px;
-
+      height: 8rem;
+      
+      resize: none;
       padding: 1rem;
       font-size: 2.4rem;
       margin-bottom: $secondary-spacing;
@@ -94,21 +91,26 @@
 }
 
 .mobile__menu {
-  @extend .box-shadow;
   position: fixed;
-  width: 100%;
-  height: 10vh;
-  padding: $primary-spacing;
-  background-color: #fff;
   display: flex;
+  width: 8rem;
+  height: 10vh;
   justify-content: center;
 
   bottom: 0;
+  right: 0;
   button {
-    @extend .button;
-    width: 60%;
+    width: 100%;
+    border: none;
+    
+    font-size: 1.4rem;
+    color: #fff;
+
+    border-radius: 40% 0 0 40%;
+    background-color: $primary-color;
   }
 }
+
 
 @media (min-width: 700px) {
   .todo__menu {
