--- a/public/styles/_todoList.scss
+++ b/public/styles/_todoList.scss
@@ -1,36 +1,34 @@
 .listing__todo {
   @extend .box-shadow;
   height: 35vh;
+  padding: 0.5rem;
   list-style: none;
+  
   overflow-y: scroll;
   overflow-x: hidden;
-  padding: 0.5rem;
   margin-bottom: $secondary-spacing;
 
+  transition: 0.2s;
 
   .to-do {
     position: relative;
     margin: 1rem 0;
     display: flex;
+    min-height: 2.8rem;
+
     .content {
       width: 100%;
       height: 100%;
       padding: 0 0.6rem;
-      min-height: 3.2rem;
-      font-size: 1.6rem;  
+      min-height: 2.8rem;
+      
+      font-size: 1.8rem;  
       overflow: hidden;
       
       &:focus {
         outline: none;
         background: #60cdff50;
       }
-    }
-
-    .text {
-      max-width: 100%;
-      padding: 0 1rem;
-      word-break: break-word;
-      grid-area: text_content;
     }
 
     .input {
@@ -54,27 +52,20 @@
         color: $third-color;
       }
     }
-
-    &:hover {
-      background: #60cdff50;
-    }
-
-    transition: 0.2s;
   }
 
   .input + label {
     margin: 0 0.2rem;
-    margin-bottom: 0.8rem;
     font-size: 1.5rem;
     cursor: pointer;
   }
 
   .input + label:before {
     content: "\2714";
-    border: 2px solid #60cdff;
+    border: 2px solid $primary-color;
     display: inline-block;
     width: 2rem;
-    height: 2.4rem;
+    height: 2.2rem;
 
     padding-left: 0.8rem;
     padding-top: 0.2rem;
@@ -89,8 +80,8 @@
   }
 
   .input:checked + label:before {
-    background: #60cdff;
-    border-color: #60cdff;
+    background: $primary-color;
+    border-color: $primary-color;
     color: #fff;
   }
 
@@ -101,8 +92,8 @@
 
   .input:checked + label:before {
     transform: scale(1);
-    background-color: #60cdff;
-    border-color: #60cdff;
+    background-color: $primary-color;
+    border-color: $primary-color;
   }
 
   .input:checked ~ label span {
