--- a/public/styles/_notifications.scss
+++ b/public/styles/_notifications.scss
@@ -1,3 +1,53 @@
+.notify {
+  @extend .box-shadow;
+  position: relative;
+  width: 100%;
+  padding: 1rem;
+  margin: 1rem 0;
+
+  background-color: #fff;
+
+  .notify__header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.4rem;
+  }
+
+  .notify__delete {
+    width: 28px;
+    height: 28px;
+    font-size: 1.8rem;
+    font-weight: bold;
+    background-color: transparent;
+    border: none;
+  }
+
+  .notify__body {
+    font-size: 1.6rem;
+    margin-top: 1rem;
+  }
+
+  .delete {
+    width: 3.2rem;
+    height: 3.2rem;
+    border: none;
+    background-color: transparent;
+
+    font-size: 1.6rem;
+    color: $primary-color;
+
+    cursor: pointer;
+    align-self: center;
+    transition: color 0.6s;
+
+    &:hover {
+      color: $third-color;
+    }
+  }
+}
+
 .notifications {
   position: absolute;
   width: 100%;
@@ -9,38 +59,6 @@
   bottom: 0;
   right: 0;
   z-index: 20;
-
-  .notify {
-    @extend .box-shadow;
-    position: relative;
-    width: 100%;
-    padding: 1rem;
-    margin: 1rem 0;
-
-    background-color: #fff;
-
-    .notify__header {
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      font-size: 1.4rem;
-    }
-
-    .notify__delete {
-      width: 28px;
-      height: 28px;
-      font-size: 1.8rem;
-      font-weight: bold;
-      background-color: transparent;
-      border: none;
-    }
-
-    .notify__body {
-      font-size: 1.6rem;
-      margin-top: 1rem;
-    }
-  }
 
   .error {
     border: 1px red solid;
