--- a/public/styles/_todoList.scss
+++ b/public/styles/_todoList.scss
@@ -35,23 +35,16 @@
       display: none;
       grid-area: check;
     }
+  }
 
-    .delete {
-      height: 3.2rem;
-      border: none;
-      background-color: transparent;
-
-      font-size: 1.6rem;
-      color: $primary-color;
-
-      cursor: pointer;
-      align-self: center;
-      transition: color 0.6s;
-
-      &:hover {
-        color: $third-color;
-      }
-    }
+  .alert {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2.4rem;
+    color: rgba(130, 130, 130, 0.4);
   }
 
   .input + label {
