--- a/public/styles/_calendar.scss
+++ b/public/styles/_calendar.scss
@@ -92,6 +92,21 @@
     }
   }
 
+  .example {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: 1.4rem;
+    margin-bottom: 2rem;
+  }
+
+  .example__both,
+  .example__task,
+  .example__event {
+    width: 18px;
+    height: 12px;
+    margin: 0.4rem 0;
+  }
+
   .has__both,
   .has__task,
   .has__event {
@@ -102,14 +117,17 @@
     right: 0;
   }
 
+  .example__both,
   .has__both {
     background-color: rgb(88, 41, 177);
   }
   
+  .example__task,
   .has__task {
     background-color: $primary-color;
   }
 
+  .example__event,
   .has__event {
     background-color: rgb(45, 209, 132);
   }
