--- a/public/styles/_menu.scss
+++ b/public/styles/_menu.scss
@@ -7,8 +7,9 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-
   background-color: #fff;
+  
+  z-index: 5;
   transform: translateX(-120%);
   transition: linear 0.4s;
 
@@ -113,6 +114,7 @@
   height: 10vh;
   justify-content: center;
 
+  z-index: 10;
   bottom: 0;
   right: 0;
   button {
