--- a/public/styles/_notifications.scss
+++ b/public/styles/_notifications.scss
@@ -1,34 +1,31 @@
 .notify {
-  @extend .box-shadow;
+  @extend .box-shadow, .bg-white;
   position: relative;
   width: 100%;
   padding: 1rem;
   margin: 1rem 0;
 
-  background-color: #fff;
-
   transform: scale(0);
   transition: transform 0.4s;
 
   .notify__header {
+    @extend .font-size-primary;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1.4rem;
   }
 
   .notify__delete {
+    @extend .no-bg, .font-size-tertiary;
     width: 28px;
     height: 28px;
-    font-size: 1.8rem;
     font-weight: bold;
-    background-color: transparent;
     border: none;
   }
 
   .notify__body {
-    font-size: 1.4rem;
+    @extend .font-size-primary;
     margin-top: 0.5rem;
   }
 
@@ -40,12 +37,11 @@
   }
 
   .delete {
+    @extend .no-bg, .font-size-secondary;
     width: 3.2rem;
     height: 3.2rem;
     border: none;
-    background-color: transparent;
 
-    font-size: 1.6rem;
     color: $primary-color;
 
     cursor: pointer;
@@ -53,7 +49,7 @@
     transition: color 0.6s;
 
     &:hover {
-      color: $third-color;
+      color: $tertiary-color;
     }
   }
 }
@@ -77,10 +73,10 @@
   .error {
     border: 1px red solid;
     background-color: rgba(255, 0, 0, 0.7);
-    color: #fff;
+    color: $white-color;
 
     .notify__delete {
-      color: #fff;
+      color: $white-color;
     }
   }
 }
