--- a/public/styles/_todoList.scss
+++ b/public/styles/_todoList.scss
@@ -1,4 +1,4 @@
-.listing__todo {
+.todo__list {
   @extend .box-shadow;
   height: 35vh;
   padding: 0.5rem;
@@ -12,20 +12,20 @@
 
   .to-do {
     position: relative;
-    margin: 1rem 0;
     display: flex;
     min-height: 2.8rem;
+    margin: 1rem 0;
 
     transform: scale(0);
     transition: transform 0.4s;
 
     .content {
+      @extend .font-size-tertiary;
       width: 100%;
       height: 100%;
       padding: 0 0.6rem;
       min-height: 2.8rem;
       
-      font-size: 1.8rem;  
       overflow: hidden;
       
       &:focus {
@@ -45,11 +45,10 @@
   }
 
   .alert {
+    @include align-center(flex);
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
     font-size: 2.4rem;
     color: rgba(130, 130, 130, 0.4);
   }
@@ -69,9 +68,9 @@
 
     padding-left: 0.8rem;
     padding-top: 0.2rem;
+    color: transparent;
 
     vertical-align: middle;
-    color: transparent;
     transition: 0.4s;
   }
 
@@ -80,24 +79,13 @@
   }
 
   .input:checked + label:before {
-    background: $primary-color;
+    background-color: $primary-color;
     border-color: $primary-color;
-    color: #fff;
+    color: $white-color;
   }
 
   .input:disabled + label:before {
     transform: scale(1);
-    border-color: #aaa;
-  }
-
-  .input:checked + label:before {
-    transform: scale(1);
-    background-color: $primary-color;
-    border-color: $primary-color;
-  }
-
-  .input:checked ~ label span {
-    color: gray;
-    text-decoration: line-through;
+    border-color: transparent;
   }
 }
