menu todo list events refactored

--- a/public/styles/_notifications.scss
+++ b/public/styles/_notifications.scss
@@ -36,7 +36,7 @@
     border-top: 1px solid $secondary-color;
   }
 
-  .delete {
+  .delete-button {
     @extend .no-bg, .font-size-secondary;
     width: 3.2rem;
     height: 3.2rem;
