--- a/public/styles/_todoList.scss
+++ b/public/styles/_todoList.scss
@@ -1,6 +1,7 @@
 .todo__list {
   @extend .box-shadow;
-  height: 35vh;
+  height: 40vh;
+  width: 100%;
   padding: 0.5rem;
   list-style: none;
   
