--- a/public/styles/_calendar.scss
+++ b/public/styles/_calendar.scss
@@ -1,6 +1,6 @@
 .calendar {
-  width: 100%;
   max-height: 900px;
+  width: 100%;
   font-weight: 700;
 
   padding: 2rem;
@@ -33,7 +33,7 @@
   .week__days,
   .days {
     @include align-center(grid);
-    grid-template-columns: repeat(7, 12%);
+    grid-template-columns: repeat(7, 4rem);
 
     row-gap: 1.6rem;
     column-gap: 1rem;
@@ -67,63 +67,21 @@
 
       &:focus {
         outline: none;
-        border: 1px solid $primary-color;
-        box-shadow: 2px 2px 6px $primary-color;
       }
 
       &.selected {
-        color: #fff;
-        background-color: #60cdff;
+        border: 1px solid $primary-color;
+        box-shadow: 2px 2px 6px $primary-color;
       }
-    }
-
-    .selected {
-      color: $white-color;
-      background-color: $primary-color;
     }
 
     .last__month {
       color: $neutral-color;
     }
-  }
 
-  .example {
-    @extend .font-size-primary;
-    display: flex;
-    justify-content: space-evenly;
-    margin-bottom: 2rem;
-  }
-
-  .example__both,
-  .example__task,
-  .example__event {
-    width: 18px;
-    height: 12px;
-    margin: 0.4rem 0;
-  }
-
-  .has__both,
-  .has__task,
-  .has__event {
-    position: absolute;
-    width: 25%;
-    height: 32%;
-    top: 0;
-    right: 0;
-  }
-
-  .example__both,
-  .has__both {
-    background-color: rgb(88, 41, 177);
-  }
-
-  .example__task,
-  .has__task {
-    background-color: $primary-color;
-  }
-
-  .example__event,
-  .has__event {
-    background-color: rgb(45, 209, 132);
+    .has-task {
+      background-color: $primary-color;
+      color: $white-color;
+    }
   }
 }
