--- a/public/styles/_notifications.scss
+++ b/public/styles/_notifications.scss
@@ -1,31 +1,35 @@
 .notify {
-  @extend .box-shadow, .bg-white;
+  @include box-shadow();
   position: relative;
   width: 100%;
   padding: 1rem;
   margin: 1rem 0;
 
+  background-color: var(--color-white);
+
   transform: scale(0);
   transition: transform 0.4s;
 
   .notify__header {
-    @extend .font-size-primary;
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: 1.4rem;
   }
 
   .notify__delete {
-    @extend .no-bg, .font-size-tertiary;
     width: 28px;
     height: 28px;
+    font-size: 1.8rem;
     font-weight: bold;
+    
     border: none;
+    background-color: initial
   }
 
   .notify__body {
-    @extend .font-size-primary;
+    font-size: 1.4rem;
     margin-top: 0.5rem;
   }
 
@@ -33,23 +37,24 @@
     font-size: 1.2rem;
     margin-top: 0.5rem;
     padding-top: 0.5rem;
-    border-top: 1px solid $secondary-color;
+    border-top: 1px solid var(--color-secondary);
   }
 
   .delete-button {
-    @extend .no-bg, .font-size-secondary;
     width: 3.2rem;
     height: 3.2rem;
     border: none;
+    font-size: 1.6rem;
+    color: var(--color-secondary);
 
-    color: $primary-color;
-
-    cursor: pointer;
     align-self: center;
     transition: color 0.6s;
-
+    
+    background-color: initial;
+    cursor: pointer;
+    
     &:hover {
-      color: $tertiary-color;
+      color: var(--color-tertiary);
     }
   }
 }
@@ -73,10 +78,10 @@
   .error {
     border: 1px red solid;
     background-color: rgba(255, 0, 0, 0.7);
-    color: $white-color;
+    color: var(--color-white);
 
     .notify__delete {
-      color: $white-color;
+      color: var(--color-white);
     }
   }
 }
