--- a/public/styles/layouts/_l-menu.scss
+++ b/public/styles/layouts/_l-menu.scss
@@ -1,21 +1,19 @@
-
-
 .l-menu {
   @include default-flex;
-  
+
   position: absolute;
   width: 100%;
   height: 100vh;
   padding: $secondary-spacing;
   background-color: var(--color-white);
-  
+
   z-index: 5;
   transform: translateX(-120%);
   transition: linear 0.4s;
 
   #selected__day {
     font-size: 1.6rem;
-    color: $text-title;
+    color: var(--color-text-title);
   }
 
   &__list {
@@ -25,22 +23,22 @@
     width: 100%;
     padding: 0.5rem;
     list-style: none;
-    
+
     overflow-y: scroll;
     overflow-x: hidden;
     margin-bottom: $secondary-spacing;
-  
+
     transition: 0.2s;
-  
+
     .on-screen {
       transform: scale(1);
     }
-    
+
     .alert {
       @include align-center(flex);
       width: 100%;
       height: 100%;
-      
+
       font-size: 2.4rem;
       color: rgba(130, 130, 130, 0.4);
     }
@@ -54,7 +52,7 @@
       @include box-shadow();
       width: 100%;
       height: 8rem;
-      
+
       resize: none;
       padding: 1rem;
       font-size: 2.4rem;
@@ -66,7 +64,6 @@
       padding: $primary-spacing;
       margin-bottom: $secondary-spacing;
     }
-
 
     #todo,
     .c-button {
@@ -103,16 +100,18 @@
       transition: transform 0.4s;
     }
 
-    .event__config.active {
-      transform: scale(1);
-      #title,
-      #first-alert {
-        @include box-shadow();
-        width: 100%;
-        padding: 1rem;
-        font-size: 1.4rem;
-        margin-bottom: $primary-spacing;
-      }
+  }
+
+  .event__config.active {
+    transform: scale(1);
+    
+    #title,
+    #first-alert {
+      @include box-shadow();
+      width: 100%;
+      padding: 1rem;
+      font-size: 1.4rem;
+      margin-bottom: $primary-spacing;
     }
   }
 }
@@ -122,25 +121,27 @@
   left: 0;
 }
 
-.mobile__menu {
-  @include default-flex;
-
+#mobile-menu {
   position: fixed;
   width: 8rem;
   height: 10vh;
-  flex-direction: initial;
 
+  border: none;
+  font-size: 1.4rem;
+  color: var(--color-white);
+  border-radius: 40% 0 0 40%;
+  background-color: var(--color-primary);
 
-  z-index: 10;
-  bottom: 0;
   right: 0;
-  button {
-    width: 100%;
-    border: none;
-    font-size: 1.4rem;
-    color: var(--color-white);
-    border-radius: 40% 0 0 40%;
-    background-color: var(--color-primary);
+  bottom: 0;
+  z-index: 10;
+
+  transition: background-color 1s;
+
+  cursor: pointer;
+
+  &:active {
+    transform: scaleY(0.9);
   }
 }
 
@@ -155,7 +156,7 @@
     box-shadow: 2px 2px 8px rgba(200, 200, 200, 0.5);
   }
 
-  .mobile__menu {
+  #mobile-menu {
     display: none;
   }
 }
