--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1,6 +1,3 @@
-$text-title: #3a495e;
-$neutral-color: #959595;
-
 $primary-spacing: 1rem;
 $secondary-spacing: 2rem;
 
@@ -14,6 +11,7 @@ $secondary-spacing: 2rem;
   --color-tertiary: rgb(220, 50, 50);
 
   --color-text-title: #3a495e;
+  --color-neutral: #959595;
 
   font-family: "Roboto", sans-serif;
   font-size: 62.5%;
@@ -65,7 +63,7 @@ body {
 
 @import "./layouts/l-menu";
 @import "./layouts/l-calendar";
-@import "notifications";
+@import "./components/c-notify";
 
 @media (min-width:700px) {
   body h1 {
